--- a/index.html
+++ b/index.html
@@ -476,13 +476,34 @@
                   </div>
                   <div class="seasonal-media">
                     <video muted loop playsinline preload="metadata">
+                      <!-- Десктопные версии -->
                       <source
-                        src="./src/video/toplivnaja-sistemaa.mp4"
+                        src="../src/video/toplivnaja-sistemaa.mp4"
                         type="video/mp4"
+                        media="(min-width: 481px)"
                       />
                       <source
                         src="./src/video/toplivnaja-sistemaa.webm"
                         type="video/webm"
+                        media="(min-width: 481px)"
+                      />
+
+                      <!-- Мобильные версии до 480px -->
+                      <source
+                        src="./src/video/toplivnaya-sistema-mobile.mp4"
+                        type="video/mp4"
+                        media="(max-width: 480px)"
+                      />
+                      <source
+                        src="./src/video/toplivnaya-sistema-mobile.webm"
+                        type="video/webm"
+                        media="(max-width: 480px)"
+                      />
+
+                      <!-- Fallback для старых браузеров -->
+                      <source
+                        src="./src/video/toplivnaja-sistemaa.mp4"
+                        type="video/mp4"
                       />
                     </video>
                   </div>
@@ -536,13 +557,34 @@
                   </div>
                   <div class="seasonal-media">
                     <video muted loop playsinline preload="metadata">
+                      <!-- Десктопные версии -->
                       <source
                         src="./src/video/remont-dvigatelya.mp4"
                         type="video/mp4"
+                        media="(min-width: 481px)"
                       />
                       <source
                         src="./src/video/remont-dvigatelya.webm"
                         type="video/webm"
+                        media="(min-width: 481px)"
+                      />
+
+                      <!-- Мобильные версии до 480px -->
+                      <source
+                        src="./src/video/remont-dvigatelya-mobile.mp4"
+                        type="video/mp4"
+                        media="(max-width: 480px)"
+                      />
+                      <source
+                        src="./src/video/remont-dvigatelya-mobile.webm"
+                        type="video/webm"
+                        media="(max-width: 480px)"
+                      />
+
+                      <!-- Fallback для старых браузеров -->
+                      <source
+                        src="./src/video/remont-dvigatelya.mp4"
+                        type="video/mp4"
                       />
                     </video>
                   </div>
@@ -596,13 +638,34 @@
                   </div>
                   <div class="seasonal-media">
                     <video muted loop playsinline preload="metadata">
+                      <!-- Десктопные версии -->
                       <source
-                        src="./src/video/remont-hodovoy-chasti.mp4"
+                        src="../src/video/remont-hodovoy-chasti.mp4"
                         type="video/mp4"
+                        media="(min-width: 481px)"
                       />
                       <source
                         src="./src/video/remont-hodovoy-chasti.webm"
                         type="video/webm"
+                        media="(min-width: 481px)"
+                      />
+
+                      <!-- Мобильные версии до 480px -->
+                      <source
+                        src="./src/video/remont-hodovoy-mobile.mp4"
+                        type="video/mp4"
+                        media="(max-width: 480px)"
+                      />
+                      <source
+                        src="./src/video/remont-hodovoy-mobile.webm"
+                        type="video/webm"
+                        media="(max-width: 480px)"
+                      />
+
+                      <!-- Fallback для старых браузеров -->
+                      <source
+                        src="./src/video/remont-hodovoy-chasti.mp4"
+                        type="video/mp4"
                       />
                     </video>
                   </div>
